// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render a content hint if given 1`] = `
<div
  class="group"
>
  <div
    class="fieldwrapper"
  >
    <label
      for="foo"
    >
      Test input
    </label>
    <input
      aria-describedby="bar"
      id="foo"
    />
  </div>
  <div
    class="infoWrapper"
  >
    <span
      id="bar"
    >
      Content hint test
    </span>
  </div>
</div>
`;

exports[`Input should render an error text when invalid 1`] = `
<div
  class="group"
>
  <div
    class="fieldwrapper"
  >
    <label
      for="foo"
    >
      Test input
    </label>
    <input
      aria-describedby="bar"
      id="foo"
    />
  </div>
  <div
    class="errorWrapper"
  >
    <span
      id="bar"
    >
      Test error
    </span>
  </div>
</div>
`;

exports[`Input should render an input and label only 1`] = `
<div
  class="group"
>
  <div
    class="fieldwrapper"
  >
    <label
      for="foo"
    >
      Test input
    </label>
    <input
      id="foo"
    />
  </div>
</div>
`;
